feat: 重构项目为uni-job现代化企业招聘管理平台

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           '" />',
       )
     </script>
-    <title>UniAppJob</title>
+    <title>uni-job - 现代化企业招聘管理平台</title>
     <!--preload-links-->
     <!--app-context-->
   </head>
